FOF 3.1.5
================================================================================
+ Component version helper

FOF 3.1.4
================================================================================
! PHP 7.2 compatibility: replace "numeric" field with "number". You have to do this change in your forms manually.
+ Select helper for use with Akeeba Frontend Framework (currently internal to Akeeba Ltd)
~ Deprecated DataModel::blacklistFilters for getting the filter list. Use getBlacklistFilters instead.
~ Deprecated XML Forms and associated features (fields, automatic validation, scaffolding, ...). They will be removed in FOF 4.0. We recommend using Blade (or PHP) templates instead.
~ Joomla! 4: Bump maximum Joomla! version suported by FOF and FOF-based extensions to 4.0.999
~ Joomla! 4: Do not use JVersion constant access as class properties
~ Joomla! 4: Component installation workarounds for Joomla! 3 (_createAdminMenus and _reallyPublishAdminMenuItems) will not run under Joomla! 4 as they'd break the installation.
~ Joomla! 4: Change rendering of toolbar tabs to match Bootstrap 4 styling, when using the "classic" linkbar rendering option (default)
~ Joomla! 3 renderer: using methods to open and close the component HTML output wrapper elements instead of hardcoding the output in pre-/post-render methods.
# [LOW] The default UCM content type information still referenced FOF 2
# [LOW] The logoutUser platform method did not work

FOF 3.1.3
================================================================================
+ TimezoneWrangler helper class
+ Automatically refresh the #__extensions version number before fetching updates if it's inconsistent
~ Change the way we catch and warn about Container serialization
# [HIGH] Joomla! changed the way the Calendar field works, stripping the time by default (b/c break)
# [LOW] Joomla! changed onchange to onChange for JHtml calendar, breaking the Date form filter field in Joomla! 3.6+

FOF 3.1.2