@@ -1,6 +1,7 @@
 FOF 3.1.5
 ================================================================================
 + Component version helper
+# [HIGH] The defaultView option in fof.xml was being ignored
 
 FOF 3.1.4
 ================================================================================
